cicd: main에서 push해도 도커에 들어가도록

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,7 +13,7 @@ concurrency:
 
 jobs:
   build-only:
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -38,6 +38,8 @@ jobs:
       github.event.action == 'closed' &&
       github.event.pull_request.merged == true &&
       github.event.pull_request.base.ref == 'main'
+      || (github.event_name == 'push' &&
+                github.ref == 'refs/heads/main')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout merged commit
