--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     implementation 'com.mysql:mysql-connector-j:8.0.33'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
 }
 
 application {
